homepage loading screen scrolling solved, aligned ambassador page with figma

--- a/src/routes/ambassador-detail/AmbassadorDetail.css
+++ b/src/routes/ambassador-detail/AmbassadorDetail.css
@@ -1,60 +1,145 @@
-.detail-main {
+.ambassador-page .detail-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 0px 30px 50px 30px;
 }
 
-.detail-header{
-    font-size: 12vw;
-    line-height: 1;
-    margin-top: 3vw;
+.ambassador-page .main-wrapper{
+    margin: 0px 20px 0px 20px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.article{
+.ambassador-page .detail-header-box{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 140px;
+    width: 100%;
+}
+
+.ambassador-page .detail-header {
+    font-size: 4rem;
+    margin: 0px;
+}
+
+.ambassador-page .detail-header-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    padding: 5px;
+    border: 3px solid black;
+    margin-top: 20px;
+    width: 70px;
+    height: 35px;
+}
+
+.ambassador-page .detail-header-button:hover {
+    background-color: lightgrey;
+}
+
+.ambassador-page .detail-header-button-back {
+    color: #1A1A1A;
+    margin-right: 2px;
+}
+
+.ambassador-page .detail-header-button-chevron-left {
+    font-weight: 70;
+    margin: 0px 0px 5px 2px;
+    height: 18px;
+    width: 9px;
+}
+
+.ambassador-page .article{
     font-size: 4vw;
     line-height: 1.4;
     margin: 1px;
     white-space: pre-wrap;
 }
 
-/* Wide screen styling */
-@media (min-width:851px) {
-    .main-wrapper {
-        width: 50%;
-        margin: 0 auto;
-    }
-
-    .detail-header{
-        font-size: 5vw;
-    }
-
-    .article{
-        font-size: 1.4vw;
-        line-height: 1.5;
-    }
-}
-
-@media (min-width:441px) and (max-width: 900px) {
-    .main-wrapper {
-        width: 65%;
-        margin: 0 auto;
-    }
-
-    .detail-header{
-        font-size: 10vw;
-    }
-
-    .article{
-        font-size: 2.5vw;
-        line-height: 1.4;
-    }
-}
-
-.display-image {
-    border-radius: 5vw;
+.ambassador-page .display-image {
+    border-radius: 36px;
     width: 100%;
+    height: 25rem;
+    object-fit: contain;
+    background-color: white;
+    margin-bottom: 25px;
 }
 
-.video {
+.ambassador-page .video {
     border-radius: 5vw;
     margin-bottom: 20px;
     width: 100%;
+}
+
+@media (min-width:640px) and (max-width: 1200px) {
+    .ambassador-page .detail-header-button{
+        height: 2rem;
+        width: 4rem;
+    } 
+
+    .ambassador-page .detail-header-button-back {
+        font-size: 0.8rem;
+    }
+
+    .ambassador-page .detail-header-button-chevron-left {
+        font-size: 0.8rem;
+        margin: 0px 0px 2px 2px;
+    }
+
+    .ambassador-page .detail-header {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 475px) and (max-width: 640px) {
+    .ambassador-page .detail-header-button{
+        height: 1.5rem;
+        width: 3rem;
+    }
+    
+    .ambassador-page .detail-header-button-back {
+        font-size: 0.6rem;
+    }
+    
+    .ambassador-page .detail-header-button-chevron-left {
+        margin: 0px 5px 0px 0px;
+        font-size: 0.6rem;
+        width: 7;
+        height: 14px;
+    }
+
+    .ambassador-page .detail-header {
+        font-size: 2.5rem;
+    }
+    
+}
+
+@media (max-width: 475px) {
+    .ambassador-page .detail-header-button{
+        height: 1.5rem;
+        width: 3rem;
+    }
+    
+    .ambassador-page .detail-header-button-back {
+        font-size: 0.6rem;
+    }
+    
+    .ambassador-page .detail-header-button-chevron-left {
+        font-size: 0.6rem;
+        margin: 0px 5px 0px 0px;
+        width: 7;
+        height: 14px;
+    }
+
+    .ambassador-page .detail-header {
+        font-size: 2rem;
+    }
 }
