--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -7,6 +7,7 @@
     scroll-snap-type: y mandatory;
     max-height: 100vh;
     scroll-padding-top: 100px;
+    overflow-y: scroll;
 }
 
 main {
